--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 
     input {
       box-sizing: border-box;
-      border: 2px solid #ccc;
+      border: 1px solid #ccc;
       border-radius: 4px;
       font-size: 12px;
       background-color: white;
@@ -17,8 +17,8 @@
     button {
       background-color: white;
       color: black;
-      border: 2px solid lightgray;
-      border-radius: 15px;
+      border: 1px solid lightgray;
+      border-radius: 4px;
       margin-top: 10px;
       font-size: 12px;
     }
@@ -30,10 +30,10 @@
 
   <body>
 
-    <h3>GitHub to Oxygen XML Web-Author</h3>
-    <p>Set the XML Web-Author host.</p> 
+    <h3>GitHub to Oxygen XML Web Author</h3>
+    <p>Set the XML Web Author URL.</p> 
 
-    <input type="text" name="host" value="" placeholder='Example: "oxygenxml.com"' id="host"/>
+    <input type="text" name="host" value="" placeholder='https://www.oxygenxml.com/oxygen-xml-web-author/app/oxygen.html' id="host"/>
 
     <button id="save">Save</button>
     <button id="cancel">Cancel</button>
