--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
 <body id="popup-body">
 
   <div class="ext-container">
+
     <a id="oxygen-link" href="https://www.oxygenxml.com/xml_web_author.html" target="_blank" title="Oxygen XML Web Author">
       <img id="web-author-img" src="images/webauthor.png" />
     </a>
@@ -17,12 +18,14 @@
 
   <p id="ext-info">Enter the URL of the Oxygen XML Web Author dashboard</p>
 
-  <input type="text" name="host" value="" placeholder='https://www.oxygenxml.com/oxygen-xml-web-author/app/oxygen.html'
+  <input type="text" name="host" value="" placeholder='https://www.oxygenxml.com/oxy...'
     id="host" />
 
   <div class="button-container">
+
     <button id="save" class="primary-button ext-button">Save</button>
     <button id="cancel" class="ext-button">Cancel</button>
+
   </div>
 
   <script src="popup.js"></script>
