Some mini-refactoring.

--- a/popup.html
+++ b/popup.html
@@ -13,8 +13,9 @@
       <img id="web-author-img" src="images/webauthor.png" />
     </a>
 
-    <h1 class="dialog-tittle">Oxygen XML Web Author extension</h1>
+    <h1 class="dialog-tittle">Oxygen XML Web Author <span id="extension">extension</span></h1>
   </div>
+
 
   <p id="ext-info">Enter the URL of the Oxygen XML Web Author dashboard</p>
 
