Separated by folders. Update manifest.json. Update README.md.

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 
 <body id="popup-body">
 
-  <div class="ext-container">
+  <div class="extension-container">
 
     <a id="oxygen-link" href="https://www.oxygenxml.com/xml_web_author.html" target="_blank" title="Oxygen XML Web Author">
       <img id="web-author-img" src="images/webauthor.png" />
@@ -16,8 +16,9 @@
     <h1 class="dialog-tittle">Oxygen XML Web Author <span id="extension">extension</span></h1>
   </div>
 
+  <hr id="styled-line"/>
 
-  <p id="ext-info">Enter the URL of the Oxygen XML Web Author dashboard</p>
+  <p id="extension-info">Enter the URL of the Oxygen XML Web Author dashboard</p>
 
   <input type="text" name="host" value="" placeholder='https://www.oxygenxml.com/oxy...'
     id="host" />
@@ -29,8 +30,8 @@
 
   </div>
 
-  <script src="popup.js"></script>
-  <script src="displayhost.js"></script>
+  <script src="scripts/popup.js"></script>
+  <script src="scripts/display-host.js"></script>
 
 </body>
 
