--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body id="popup-body">
@@ -10,7 +10,7 @@
   <div class="extension-container">
 
     <a id="oxygen-link" href="https://www.oxygenxml.com/xml_web_author.html" target="_blank" title="Oxygen XML Web Author">
-      <img id="web-author-img" src="images/webauthor.png" />
+      <img id="web-author-img" src="images/web-author.png" />
     </a>
 
     <h1 class="dialog-tittle">Oxygen XML Web Author <span id="extension">extension</span></h1>
@@ -25,8 +25,8 @@
 
   <div class="button-container">
 
-    <button id="save" class="primary-button ext-button">Save</button>
-    <button id="cancel" class="ext-button">Cancel</button>
+    <button id="save" class="primary-button extension-button">Save</button>
+    <button id="cancel" class="extension-button">Cancel</button>
 
   </div>
 
