--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -13,7 +13,7 @@
       <img id="web-author-img" src="images/web-author.png" />
     </a>
 
-    <h1 class="dialog-tittle">Oxygen XML Web Author <span id="extension">extension</span></h1>
+    <h1 class="dialog-tittle">Oxygen XML Web Author <span id="extension">GitHub extension</span></h1>
   </div>
 
   <hr id="styled-line"/>
