--- a/firefox/popup.html
+++ b/firefox/popup.html
@@ -21,7 +21,7 @@
 
   <p id="extension-info">Enter the URL of the Oxygen XML Web Author dashboard</p>
 
-  <input type="text" name="host" value="" placeholder='https://www.oxygenxml.com/oxy...'
+  <input type="text" name="host" value="" placeholder="https://www.oxygenxml.com/oxy..."
     id="host" />
 
   <div class="button-container">
@@ -33,8 +33,6 @@
 
   <script src="scripts/popup.js"></script>
   <script src="scripts/display-host.js"></script>
-  <script src="/common/content.js"></script>
-  <script src="/scripts/background.js"></script>
 
 </body>
 
