Added help-icon.png & modification in build script.

--- a/popup.html
+++ b/popup.html
@@ -23,12 +23,16 @@
 
   <input type="text" name="host" value="" placeholder="https://www.oxygenxml.com/oxy..."
     id="host" />
+  
+  <div id="help-icon">
+    <a href="#" target="_blank" title="Get Help!">
+      <img src="images/help-icon.png" />
+    </a>
+  </div>
 
-  <div class="button-container">
-
+  <div class="action-container">
     <button id="save" class="primary-button extension-button">Save</button>
     <button id="cancel" class="extension-button">Cancel</button>
-
   </div>
 
   <script src="scripts/popup.js"></script>
