Some changes in build-build tool and scripts.:art:

--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
       <img id="web-author-img" src="images/web-author.png" />
     </a>
 
-    <h1 class="dialog-tittle">Oxygen XML Web Author <span id="extension">GitHub extension</span></h1>
+    <h1 class="dialog-tittle"><span id='edit'>Edit with</span> Oxygen XML Web Author <span id="extension">GitHub</span></h1>
   </div>
 
   <hr id="styled-line"/>
@@ -25,7 +25,7 @@
     id="host" />
   
   <div id="help-icon">
-    <a href="#" target="_blank" title="Get Help!">
+    <a href="https://github.com/swrd1337/web-author-browser-extension/blob/master/README.md" target="_blank" title="Get Help!">
       <img src="images/help-icon.png" />
     </a>
   </div>
