--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
       <img id="web-author-img" src="images/web-author.png" />
     </a>
 
-    <h1 class="dialog-tittle"><span id='edit'>Edit with</span> Oxygen XML Web Author <span id="extension">GitHub</span></h1>
+    <h1 class="dialog-tittle">Edit with Oxygen XML Web Author <span id="extension">GitHub</span></h1>
   </div>
 
   <hr id="styled-line"/>
